--- a/app/app/styles/main.scss
+++ b/app/app/styles/main.scss
@@ -129,6 +129,9 @@ body {
         margin: auto;
         //margin-top: 3em;
         margin-bottom: 2em;
+        &>div:not(._market) {
+          margin-top:3*$ui-small-grid-size;
+        }
     }
     font-family: $body-font-family;
     font-size:$global-font-size;
